# plankboat-rs

./: .gitignore  Cargo.toml
src/: framework.rs  handler.rs  main.rs
src/commands/: games.rs  mod.rs  myanimelist.rs
