[package]
name = "plankboat"
version = "0.1.0"
authors = ["Adrian Hedqvist <adrian@tollyx.net>"]

[dependencies]
clap = "2"
regex = "0.2"
threadpool = "1"
rand = "0.4"
log = "0.4.1"
fern = {version = "0.5.4", features = ["colored"] }
chrono = "*"
serde_json = "1.0.10"

[dependencies.serenity]
version = "0.5"
