[package]
name = "plankboat"
version = "0.1.0"
authors = ["Adrian Hedqvist <adrian@tollyx.net>"]

[dependencies]
clap = "2"
regex = "0.2"
threadpool = "1"
rand = "0.4"
log = "0.4.1"
fern = { version = "0.5.4", features = ["colored"] }
chrono = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serenity = "0.5"
rusqlite = { version = "0.11", features = ["bundled"] }
typemap = "0.3"
toml = "0.4"
reqwest = "0.8"
url = "1.7"
quick-xml = "0.12"
lazy_static = "1.0"
